--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,21 @@ body, #root {
     0 0 10px #ff69b4, /* rosa brillante */
 
 
+
+
+    0 0 30px #da70d6;
+  font-weight: bold;
+}
+
+.neon-text-card {
+  color: #0bd1ce; /* color base morado */
+  text-shadow:
+    0 0 5px #043d8b,
+    0 0 10px #69fff5, /* rosa brillante */
+
+
+
+
     0 0 30px #da70d6;
   font-weight: bold;
 }
@@ -89,6 +104,33 @@ body, #root {
 
 .animate-fadeBounce {
   animation: fadeBounce 0.6s ease-out forwards;
+}
+
+
+/* Scrollbar para Chrome, Edge y Safari */
+::-webkit-scrollbar {
+  width: 5px;             /* ancho de la barra */
+}
+
+::-webkit-scrollbar-track {
+  background: #1a0a2b;     /* fondo de la barra (oscuro) */
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #ff00ff;     /* color neón rosa oscuro */
+  border-radius: 8px;
+  box-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ff33ff;     /* color más brillante al pasar el mouse */
+}
+
+/* Para Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #ff00ff #1a0a2b; /* thumb y track */
 }
 
 
